hphp/hack/test/extracted_from_manual/03-expressions-and-operators/34-nameof-01.hack
// @generated by hh_manual from manual/hack/03-expressions-and-operators/34-nameof.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
class C {}
function expect_string(string $s): void {}
function test(): void {
    expect_string(nameof C);
    $d = dict[];
    $d[nameof C] = 4;
}
